[gd_scene load_steps=18 format=3 uid="uid://ofi7lyjwaii"]

[ext_resource type="Texture2D" uid="uid://cj2wufa08wnu6" path="res://icon.svg" id="1_id0xq"]
[ext_resource type="Script" path="res://scripts/npc.gd" id="1_m3sie"]
[ext_resource type="Script" path="res://scripts/AI/NPC_bot.gd" id="2_ucsbr"]
[ext_resource type="Script" path="res://scripts/AI/FSM/finite_state_machine.gd" id="3_amf2s"]
[ext_resource type="Script" path="res://scripts/AI/FSM/attack_fsm_component.gd" id="3_cxnio"]
[ext_resource type="Script" path="res://scripts/AI/FSM/wandering_fsm_component.gd" id="4_d0rbm"]
[ext_resource type="Script" path="res://scripts/AI/action_selection_component.gd" id="5_0smfa"]
[ext_resource type="Script" path="res://scripts/AI/FSM/find_friends_fsm_component.gd" id="6_7y7ml"]
[ext_resource type="Script" path="res://scripts/AI/FSM/runaway_player_fsm_component.gd" id="7_fxkfr"]
[ext_resource type="Script" path="res://scripts/AI/FSM/go_home_FSM_component.gd" id="8_gjlil"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_br8te"]
size = Vector2(128, 128)

[sub_resource type="CircleShape2D" id="CircleShape2D_h1lgy"]
radius = 1200.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bckbl"]
radius = 150.0

[sub_resource type="Gradient" id="Gradient_5oxvj"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.699653, 0.699653, 0.699653, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1lhh7"]
gradient = SubResource("Gradient_5oxvj")
width = 128
height = 12

[sub_resource type="Gradient" id="Gradient_i4jvk"]
offsets = PackedFloat32Array(0, 0.65493)
colors = PackedColorArray(0.929412, 0.247059, 0, 1, 0.305882, 1, 0.564706, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_itvyh"]
gradient = SubResource("Gradient_i4jvk")
width = 128
height = 12
fill_from = Vector2(0.140777, 0.519417)
fill_to = Vector2(0.699029, 0.36246)

[node name="NPC" type="CharacterBody2D" groups=["NPC"]]
script = ExtResource("1_m3sie")

[node name="NPCBot" type="Node" parent="."]
script = ExtResource("2_ucsbr")

[node name="FiniteStateMachine" type="Node" parent="NPCBot" node_paths=PackedStringArray("actor")]
script = ExtResource("3_amf2s")
actor = NodePath("../..")

[node name="AttackPlayerFSMComponent" type="Node" parent="NPCBot/FiniteStateMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("3_cxnio")
actor = NodePath("../../..")

[node name="WanderingFSMComponent" type="Node" parent="NPCBot/FiniteStateMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("4_d0rbm")
actor = NodePath("../../..")

[node name="FindFriendsFSMComponent" type="Node" parent="NPCBot/FiniteStateMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("6_7y7ml")
actor = NodePath("../../..")

[node name="RunawayPlayerFSMComponent" type="Node" parent="NPCBot/FiniteStateMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("7_fxkfr")
actor = NodePath("../../..")

[node name="GoHomeFSMComponent" type="Node" parent="NPCBot/FiniteStateMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("8_gjlil")
actor = NodePath("../../..")

[node name="ActionSelectionComponent" type="Node" parent="NPCBot" node_paths=PackedStringArray("actor")]
script = ExtResource("5_0smfa")
actor = NodePath("../..")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.372549, 0.403922, 1)
texture = ExtResource("1_id0xq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_br8te")

[node name="MyVision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MyVision"]
shape = SubResource("CircleShape2D_h1lgy")

[node name="MyAttack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MyAttack"]
shape = SubResource("CircleShape2D_bckbl")
debug_color = Color(0.812221, 0.383102, 0.396548, 0.42)

[node name="LMyState" type="Label" parent="."]
offset_left = -23.0
offset_top = -100.0
offset_right = 17.0
offset_bottom = -77.0

[node name="TChangeAction" type="Timer" parent="."]
autostart = true

[node name="TAttack" type="Timer" parent="."]
wait_time = 0.7

[node name="THealReady" type="Timer" parent="."]

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
offset_left = -63.0
offset_top = -130.0
offset_right = 65.0
offset_bottom = -66.0
texture_under = SubResource("GradientTexture2D_1lhh7")
texture_progress = SubResource("GradientTexture2D_itvyh")

[connection signal="body_entered" from="MyVision" to="." method="_on_my_vision_body_entered"]
[connection signal="body_exited" from="MyVision" to="." method="_on_my_vision_body_exited"]
[connection signal="body_entered" from="MyAttack" to="." method="_on_my_attack_body_entered"]
[connection signal="body_exited" from="MyAttack" to="." method="_on_my_attack_body_exited"]
[connection signal="timeout" from="TChangeAction" to="." method="_on_t_change_action_timeout"]
[connection signal="timeout" from="TAttack" to="." method="_on_t_attack_timeout"]
[connection signal="timeout" from="THealReady" to="." method="_on_t_heal_ready_timeout"]
